--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,16 @@ leptos_router = "0.6.9"
 leptos-use = "0.10.5"
 tokio = { version = "1.36.0", features = ["rt-multi-thread"], optional = true }
 wasm-bindgen = "=0.2.92"
+wasm-bindgen-futures = "0.4.42"
 thiserror = "1.0.57"
 tracing = { version = "0.1.40", optional = true }
 tower = { version = "0.4.13", optional = true }
 tower-http = { version = "0.5.2", features = ["fs"], optional = true }
-hyper = { version = "1.2.0", features = ["http1"], optional = true }
 web-sys = "0.3.69"
-# rusqlite = { version = "0.31.0", features = ["bundled"] }
+rusqlite = { version = "0.31.0", features = ["bundled"], optional = true }
+pulldown-cmark = "0.10.0"
+serde = "1.0.197"
+serde_derive = "1.0.197"
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
@@ -38,6 +41,7 @@ ssr = [
     "leptos_meta/ssr",
     "leptos_router/ssr",
     "dep:tracing",
+    "dep:rusqlite",
 ]
 
 [profile.wasm-release]
